[project]
name = "invoice-processor"
version = "0.1.0"
description = "AI-Powered Invoice OCR and Data Extraction Tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "groq>=0.31.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-groq>=0.3.7",
    "langgraph>=0.6.3",
    "pandas>=2.0.0",
    "pdfplumber>=0.11.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "openpyxl>=3.1.0",
    "pip>=25.2",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "werkzeug>=3.0.0",
]